[gd_scene load_steps=66 format=3 uid="uid://ypjavl7tjt1"]

[ext_resource type="Texture2D" uid="uid://bl0bkj2ve14dw" path="res://Characters/Warriors/Knight/assets/Warrior_Blue.png" id="1_ejr1d"]
[ext_resource type="Script" path="res://Characters/Warriors/Knight/knight.gd" id="1_icsfk"]
[ext_resource type="Script" path="res://Scripts/state_machine/node_finite_state_machine.gd" id="2_k86x5"]
[ext_resource type="Script" path="res://Characters/Warriors/Knight/states/idle_state.gd" id="3_bjfij"]
[ext_resource type="Script" path="res://Characters/Warriors/Knight/states/move_state.gd" id="4_61ltl"]
[ext_resource type="Script" path="res://Characters/Warriors/Knight/states/straight_attack_state.gd" id="5_glyd2"]
[ext_resource type="Script" path="res://Characters/Warriors/Knight/states/up_attack_states.gd" id="6_1jhx0"]
[ext_resource type="Script" path="res://Characters/Warriors/Knight/states/straight_attack_left_state.gd" id="7_s1vj0"]
[ext_resource type="Script" path="res://Characters/Warriors/Knight/states/down_attack_state.gd" id="7_yc6as"]
[ext_resource type="Script" path="res://Characters/Warriors/Knight/forward_view.gd" id="9_v3il0"]
[ext_resource type="Script" path="res://Characters/Warriors/Knight/backward_view.gd" id="10_787ra"]
[ext_resource type="Script" path="res://Characters/Warriors/Knight/downward_view.gd" id="10_qb7k2"]
[ext_resource type="Script" path="res://Characters/Warriors/Knight/upward_view.gd" id="11_v808a"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2yjjg"]
atlas = ExtResource("1_ejr1d")
region = Rect2(0, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_6stpr"]
atlas = ExtResource("1_ejr1d")
region = Rect2(192, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_hcysj"]
atlas = ExtResource("1_ejr1d")
region = Rect2(384, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xcdd"]
atlas = ExtResource("1_ejr1d")
region = Rect2(576, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibhcx"]
atlas = ExtResource("1_ejr1d")
region = Rect2(768, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_cohd5"]
atlas = ExtResource("1_ejr1d")
region = Rect2(960, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhtq5"]
atlas = ExtResource("1_ejr1d")
region = Rect2(0, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_obkbf"]
atlas = ExtResource("1_ejr1d")
region = Rect2(192, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ev0ln"]
atlas = ExtResource("1_ejr1d")
region = Rect2(384, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ou1by"]
atlas = ExtResource("1_ejr1d")
region = Rect2(576, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhnql"]
atlas = ExtResource("1_ejr1d")
region = Rect2(768, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_6t6yu"]
atlas = ExtResource("1_ejr1d")
region = Rect2(960, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7olbw"]
atlas = ExtResource("1_ejr1d")
region = Rect2(0, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ch52q"]
atlas = ExtResource("1_ejr1d")
region = Rect2(192, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_8eoeh"]
atlas = ExtResource("1_ejr1d")
region = Rect2(384, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8t6n"]
atlas = ExtResource("1_ejr1d")
region = Rect2(576, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqypg"]
atlas = ExtResource("1_ejr1d")
region = Rect2(768, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_brh7h"]
atlas = ExtResource("1_ejr1d")
region = Rect2(960, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmulk"]
atlas = ExtResource("1_ejr1d")
region = Rect2(0, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_13hc6"]
atlas = ExtResource("1_ejr1d")
region = Rect2(192, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dj1ro"]
atlas = ExtResource("1_ejr1d")
region = Rect2(384, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5upl"]
atlas = ExtResource("1_ejr1d")
region = Rect2(576, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_088lm"]
atlas = ExtResource("1_ejr1d")
region = Rect2(768, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_d434o"]
atlas = ExtResource("1_ejr1d")
region = Rect2(960, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_swk2h"]
atlas = ExtResource("1_ejr1d")
region = Rect2(0, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5pxs"]
atlas = ExtResource("1_ejr1d")
region = Rect2(192, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mgub"]
atlas = ExtResource("1_ejr1d")
region = Rect2(384, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2g2g"]
atlas = ExtResource("1_ejr1d")
region = Rect2(576, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_142cq"]
atlas = ExtResource("1_ejr1d")
region = Rect2(768, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1khl"]
atlas = ExtResource("1_ejr1d")
region = Rect2(960, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_asxhg"]
atlas = ExtResource("1_ejr1d")
region = Rect2(0, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5l3s"]
atlas = ExtResource("1_ejr1d")
region = Rect2(192, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4ah4"]
atlas = ExtResource("1_ejr1d")
region = Rect2(384, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_fnm8g"]
atlas = ExtResource("1_ejr1d")
region = Rect2(576, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_kolpt"]
atlas = ExtResource("1_ejr1d")
region = Rect2(768, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vu1ig"]
atlas = ExtResource("1_ejr1d")
region = Rect2(960, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_g70xn"]
atlas = ExtResource("1_ejr1d")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_g255a"]
atlas = ExtResource("1_ejr1d")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuj5n"]
atlas = ExtResource("1_ejr1d")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_qw0wb"]
atlas = ExtResource("1_ejr1d")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_28pwh"]
atlas = ExtResource("1_ejr1d")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cpoy"]
atlas = ExtResource("1_ejr1d")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbulv"]
atlas = ExtResource("1_ejr1d")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_l14ja"]
atlas = ExtResource("1_ejr1d")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_67vlb"]
atlas = ExtResource("1_ejr1d")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_cp4oy"]
atlas = ExtResource("1_ejr1d")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_veucm"]
atlas = ExtResource("1_ejr1d")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_6rwkk"]
atlas = ExtResource("1_ejr1d")
region = Rect2(960, 192, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_8vo4r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2yjjg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6stpr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcysj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xcdd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibhcx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cohd5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhtq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_obkbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ev0ln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ou1by")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhnql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6t6yu")
}],
"loop": true,
"name": &"attack_down",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7olbw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ch52q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8eoeh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8t6n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqypg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_brh7h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmulk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13hc6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dj1ro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5upl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_088lm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d434o")
}],
"loop": true,
"name": &"attack_straight",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_swk2h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5pxs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mgub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2g2g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_142cq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1khl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_asxhg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5l3s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4ah4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fnm8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kolpt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vu1ig")
}],
"loop": true,
"name": &"attack_up",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g70xn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g255a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuj5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qw0wb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28pwh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cpoy")
}],
"loop": true,
"name": &"idle",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbulv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l14ja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_67vlb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cp4oy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_veucm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6rwkk")
}],
"loop": true,
"name": &"move",
"speed": 9.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3df7n"]
radius = 22.0
height = 76.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_uy5da"]
radius = 27.0
height = 78.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_63yob"]
radius = 35.0
height = 90.0

[node name="Knight" type="CharacterBody2D" node_paths=PackedStringArray("state_machine")]
collision_layer = 64
collision_mask = 30
script = ExtResource("1_icsfk")
state_machine = NodePath("StateMachine")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_8vo4r")
animation = &"attack_straight"
autoplay = "idle"
frame = 6
frame_progress = 0.487949

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_3df7n")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CapsuleShape2D_uy5da")
debug_color = Color(0.965489, 0.180142, 0.122576, 0.42)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_node_state")]
script = ExtResource("2_k86x5")
initial_node_state = NodePath("IdleState")

[node name="IdleState" type="Node" parent="StateMachine" node_paths=PackedStringArray("character_body_2d", "animated_sprite_2d")]
script = ExtResource("3_bjfij")
character_body_2d = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")

[node name="MoveState" type="Node" parent="StateMachine" node_paths=PackedStringArray("character_body_2d", "animated_sprite_2d")]
script = ExtResource("4_61ltl")
character_body_2d = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")

[node name="StraightAttackRightState" type="Node" parent="StateMachine" node_paths=PackedStringArray("character_body_2d", "animated_sprite_2d")]
script = ExtResource("5_glyd2")
character_body_2d = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")

[node name="StraightAttackLeftState" type="Node" parent="StateMachine" node_paths=PackedStringArray("character_body_2d", "animated_sprite_2d")]
script = ExtResource("7_s1vj0")
character_body_2d = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")

[node name="UpAttackState" type="Node" parent="StateMachine" node_paths=PackedStringArray("character_body_2d", "animated_sprite_2d")]
script = ExtResource("6_1jhx0")
character_body_2d = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")

[node name="DownAttackState" type="Node" parent="StateMachine" node_paths=PackedStringArray("character_body_2d", "animated_sprite_2d")]
script = ExtResource("7_yc6as")
character_body_2d = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")

[node name="DestinationFinder" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 138
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DestinationFinder"]
shape = SubResource("CapsuleShape2D_63yob")
debug_color = Color(0.419608, 0.980392, 0.192157, 0.419608)

[node name="ForwardView" type="Node2D" parent="."]
script = ExtResource("9_v3il0")

[node name="RayCast2D" type="RayCast2D" parent="ForwardView"]
position = Vector2(26, -17)
target_position = Vector2(60, 0)
collision_mask = 10

[node name="RayCast2D2" type="RayCast2D" parent="ForwardView"]
position = Vector2(26, -11)
target_position = Vector2(60, 0)
collision_mask = 10

[node name="RayCast2D3" type="RayCast2D" parent="ForwardView"]
position = Vector2(26, -5)
target_position = Vector2(60, 0)
collision_mask = 10

[node name="BackwardView" type="Node2D" parent="."]
script = ExtResource("10_787ra")

[node name="RayCast2D" type="RayCast2D" parent="BackwardView"]
position = Vector2(-24, -17)
target_position = Vector2(-60, 0)
collision_mask = 10

[node name="RayCast2D2" type="RayCast2D" parent="BackwardView"]
position = Vector2(-24, -11)
target_position = Vector2(-60, 0)
collision_mask = 10

[node name="RayCast2D3" type="RayCast2D" parent="BackwardView"]
position = Vector2(-24, -5)
target_position = Vector2(-60, 0)
collision_mask = 10

[node name="DownwardView" type="Node2D" parent="."]
script = ExtResource("10_qb7k2")

[node name="RayCast2D" type="RayCast2D" parent="DownwardView"]
position = Vector2(1, 40)
target_position = Vector2(0, 39)
collision_mask = 74

[node name="RayCast2D2" type="RayCast2D" parent="DownwardView"]
position = Vector2(7, 40)
target_position = Vector2(0, 39)
collision_mask = 74

[node name="RayCast2D3" type="RayCast2D" parent="DownwardView"]
position = Vector2(-5, 40)
target_position = Vector2(0, 39)
collision_mask = 74

[node name="UpwardView" type="Node2D" parent="."]
script = ExtResource("11_v808a")

[node name="RayCast2D" type="RayCast2D" parent="UpwardView"]
position = Vector2(-15, -40)
target_position = Vector2(0, -52)
collision_mask = 74

[node name="RayCast2D2" type="RayCast2D" parent="UpwardView"]
position = Vector2(-9, -40)
target_position = Vector2(0, -52)
collision_mask = 74

[node name="RayCast2D3" type="RayCast2D" parent="UpwardView"]
position = Vector2(-3, -40)
target_position = Vector2(0, -52)
collision_mask = 74

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.39

[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
[connection signal="area_entered" from="DestinationFinder" to="." method="_on_destination_finder_area_entered"]
